# quarry

./: .biff  .dockerignore  .env.example  .gitignore  .gitmodules  .importlinter  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .mcpbignore  .oo-audit.jsonl  .oo-baseline.json  .oo-coupling-audit.jsonl  .oo-coupling-baseline.json  .suppression-audit.jsonl  .suppression-baseline.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Makefile  NON-FUNCTIONAL-DESIGN.md  README.md  TESTING.md  TODO.md  install-both.sh  install-client.sh  install-server.sh  install.sh  manifest.json  prfaq-ambient.bib  prfaq-ambient.tex  prfaq.bib  prfaq.tex  pyproject.toml  quarry-sync-oom-bug-report.md  resume.md
.beads/: README.md  config.yaml  dolt-server.pid  issues.jsonl  metadata.json
.beads/dolt/: config.yaml
.claude/: settings.json  settings.local.json
.claude-plugin/: plugin.json
.claude-plugin/agents/: researcher.md
.ethos/: missions.jsonl
.github/: dependabot.yml
.github/workflows/: docs.yml  lint.yml  release.yml  test.yml
.punt-labs/quarry/: config.md
.vox/: config.md
benchmarks/: bench_embedding.py
commands/: explain-dev.md  explain.md  find-dev.md  find.md  ingest-dev.md  ingest.md  quarry-dev.md  quarry.md  remember-dev.md  source-dev.md  source.md  use-dev.md
docs/: .gitignore  ADVANCED-CONFIG.md  AWS-SETUP.md  BACKEND-ABSTRACTION.md  CODE-DESIGN-EVALUATION.md  MCP-SMOKE-TEST.md  NON-FUNCTIONAL-DESIGN.md  README.md  SEARCH-TUNING.md  TOOL-PyPI.md  WORKFLOW.md  agent-memory-architecture.md  architecture.tex  async-ops.md  build-plan-g0ed.md  build-plan-quarry-b9m.md  claude-code-quarry.tex  cli-logging-ux.md  cli-logging.md  des-031v2-daemon-first.md  des-capture-ingest.md  des-capture-queue.md  des-client-architecture.md  des-library-api.md  eval-harness-design.md  improving-agent-memory.md  openapi.json  prfaq-quarry-enable.md  provider-detection-design.md  provider-detection-review.md  quarry-enable.md  quarry-iam-policy.json  retrieval-quality-improvements.md  smoke-test.md  sync-concurrency-fix.md  testing-legacy.md
docs/archive/: async-ops.md  build-plan-provider-detection.md  build-plan-remote-cli-parity.md  cli-logging-impl.md  provider-detection-design.md  sync-concurrency-fix.md
docs/build-plan-ppv/: design.md
docs/oo-refactor/: _draft-core-data.md  _draft-ingestion.md  _draft-surfaces.md  oo-design-pattern-review.md  oo-design-report.md  oo-design-review.md  oo-refactoring-plan.md  package-structure-review.md  package-structure.md  phase4-handoff.md  resume.md
docs/oo-refactoring/: oo-design-pattern-review.md  oo-design-review.md  oo-package-structure-review.md  oo-package-structure.md  oo-refactoring-plan.md  phase4-handoff.md  resume.md
docs/prd/: quarry-menubar.md
docs/sparc/: quarry-menubar-implementation.md
docs/spec/: watch_lifecycle.tex
ethos/.beads/: metadata.json
hooks/: hooks.json  pre-tool-hint.sh  session-start.sh  session-sync.sh  suppress-output.sh
infra/: manage-stack.sh  sagemaker-realtime.yaml  sagemaker-serverless.yaml
research/: automagic-knowledge-capture.md  research-2026-02-28-ambient-knowledge-prfaq.md  sageox-competitive-analysis.md  vision.md
scripts/: release-plugin.sh  restore-dev-plugin.sh  sync-chat-db.sh  test-wheel.sh
src/ocr/: __main__.py  chunker.py  config.py  database.py  embeddings.py  mcp_server.py  models.py  ocr_client.py  pdf_analyzer.py  pipeline.py  text_extractor.py
src/quarry/: __init__.py  __main__.py  _frontmatter.py  _hook_entry.py  _sql.py  _stdlib.py  artifacts.py  backends.py  backfill.py  background_ingest.py  capture.py  capture_url.py  captures_collection.py  chunk_catalog.py  chunk_search.py  chunk_store.py  chunker.py  cli_captures.py  cli_documents.py  cli_formatters.py  cli_ingest.py  cli_maintenance.py  cli_project.py  cli_remote.py  cli_runtime.py  cli_search.py  cli_sync.py  code_processor.py  collections.py  config.py  database.py  deregister_result.py  doctor.py  doctor_captures.py  doctor_daemon.py  doctor_resources.py  embeddings.py  enable.py  fd_headroom.py  fd_telemetry.py  (+56 more)
tests/: conftest.py  inproc_daemon.py  test_agent_memory.py  test_api.py  test_artifacts.py  test_backends.py  test_backfill.py  test_background_ingest.py  test_capture.py  test_capture_url.py  test_captures_cli.py  test_captures_collection.py  test_chunk_search.py  test_chunk_store.py  test_chunker.py  test_cli.py  test_cli_captures.py  test_cli_json_equivalence.py  test_cli_logging_ux.py  test_client_config.py  test_client_errors.py  test_client_task.py  test_code_processor.py  test_collections.py  test_config.py  test_connection.py  test_daemon_launcher.py  test_daemon_task_registry.py  test_database.py  test_deregister_result.py  test_doctor.py  test_doctor_daemon.py  test_doctor_resources.py  test_embeddings.py  test_enable.py  test_enable_cli.py  test_extractors.py  test_fd_headroom.py  test_fd_telemetry.py  test_formatting.py  (+93 more)
tests/eval/: test_eval_corpus.py  test_eval_golden.py  test_eval_indexing.py  test_eval_judged_unit.py  test_eval_metrics.py  test_eval_pollution.py  test_eval_queryset.py  test_eval_trec.py
tools/: __init__.py  generate_openapi.py  oo_coupling.py  oo_score.py  suppression_ratchet.py
(+156 files in other folders)
