[project]
name = "punt-quarry"
version = "0.10.1"
description = "Extract searchable knowledge from any document. Expose it to LLMs via MCP."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Punt Labs" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "boto3>=1.40.0",
    "boto3-stubs[textract,s3]>=1.40.0",
    "botocore-stubs>=1.40.0",
    "pymupdf>=1.25.0",
    "lancedb>=0.17.0",
    "tokenizers>=0.20.0",
    "huggingface-hub>=0.26.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "pyarrow>=18.0.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "python-docx>=1.1.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.5.0",
    "rapidocr>=3.6.0",
    "onnxruntime>=1.18.0",
    "opencv-python-headless>=4.8.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.14.0",
    "pathspec>=0.12.0",
    "ultimate-sitemap-parser>=1.8.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.13.0",
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
quarry = "quarry.__main__:app"

[project.urls]
Homepage = "https://github.com/punt-labs/quarry"
"Bug Tracker" = "https://github.com/punt-labs/quarry/issues"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "quarry"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit (security)
    "BLE",  # flake8-blind-except
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "A",    # flake8-builtins
    "ERA",  # flake8-eradicate (commented code)
    "PIE",  # flake8-pie
    "RSE",  # flake8-raise
    "ARG",  # flake8-unused-arguments
    "RET",  # flake8-return
    "PERF", # perflint
    "PTH",  # flake8-use-pathlib
    "ISC",  # flake8-implicit-str-concat
    "FBT",  # flake8-boolean-trap
    "C90",  # mccabe complexity
]
extend-select = ["PLC0415"]

ignore = [
    "TC001",  # Move import into TYPE_CHECKING - too aggressive
    "TC003",  # Move standard lib import into TYPE_CHECKING
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "S108", "T20", "SLF001", "ARG", "PLC0415", "A002"]
"benchmarks/*" = ["T20", "S311", "BLE001", "PLC0415", "SIM905"]
"src/quarry/__main__.py" = ["T20", "FBT"]
"src/quarry/mcp_server.py" = ["T20", "FBT"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["quarry"]
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
enable_error_code = ["ignore-without-code"]

[[tool.mypy.overrides]]
module = "quarry.code_processor"
disable_error_code = ["arg-type"]  # get_parser expects Literal union, we pass str from dict

[[tool.mypy.overrides]]
module = "quarry.database"
warn_unused_ignores = false  # lancedb stubs differ across environments

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "lancedb.*",
    "fitz",
    "openpyxl",
    "openpyxl.*",
    "pptx",
    "pptx.*",
    "pyarrow",
    "pyarrow.*",
    "rapidocr",
    "rapidocr.*",
    "onnxruntime",
    "onnxruntime.*",
    "huggingface_hub",
    "huggingface_hub.*",
    "tokenizers",
    "tokenizers.*",
    "bs4",
    "bs4.*",
    "markdownify",
]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q -m 'not slow'"
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
markers = ["slow: marks tests as slow (run with -m slow)"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2
